# santana

./: .env.example  .gitignore  .telegram_restart.sh  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _test_providers.py  _test_providers2.py  auto_update.sh  deepseek_client.py  deploy.sh  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  santana.py  test-santana-access.md  test-santana-write.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
.hermes/: brief-claude-atlas.md  brief-claude-execute-atlas.md
.notes/: EMERGENCY.md  INVARIANTS.md
agent/: __init__.py  context.py  evaluator.py  orchestration.py  orchestrator.py  patterns.py  planner.py  proactive.py  securite.py  self.py  souverainete.py  tracabilite.py
atlas_engine/: atlas.py  classifier.py  embeddings.py  memory_injector.py  model_singleton.py  rotate.py
core/: cache.py  db.py  delegate.py  disambiguate.py  json_logger.py  loop_evolution.py  provider.py  provider_manager.py  react_loop.py  scheduler.py  task_state.py  utils.py
docs/: ARCHITECTURE.md  MEMOIRE_VIVANTE_V2.md  MEMORY-FROZEN-2026-06-14.md  MODE_BRAINSTORMING.md  RAPPORT_SESSION_2026-05-28.md  README.md  gif-guide.md  reddit-locallama-draft.md  reddit-selfhosted-draft.md  show-hn-draft.md  x-thread-architecture.md
docs/archive/: ARCHITECTURE_DECISIONS.md  EMERGENCY.md  HISTORIQUE-AUDITS.md  SKILL_MOBILE_SOURCE.md  architecture-santana.mmd  btr_specifications_architecture_v4.md  btr_vision_histoire_unifiee.md
docs/assets/: generate_og.py
memory/: memory.db.old  memory.py
metrics/: __init__.py  recorder.py
scripts/: audit-security.sh  backup_before_edit.sh  backup_db.sh  benchmark_guard.sh  check_compile.py  check_rate_limit.py  ci-check.sh  cleanup-console.sh  cost_governor.py  cron-wrapper.sh  pre-commit.sh  purge_backups.sh  report_latency.py  safe_edit.sh  santana-crash-snapshot.sh  santana-doctor.sh  santana_backup.sh  santana_ci_cron.sh  santana_restore.sh  santana_validate.sh  test-commands.sh  test_routes.sh  update_docs.py  validate_prompt.py  veille_tech.py  wait-for-telegram.sh
securise/: accounts.db.tar.gz.gpg  memory.db.tar.gz.gpg
skills/: conseil-discipline-optimisation.md  profile-serge.md  rigueur-santana.md
skills/references/: conseil-discipline-optimisation-full.md
soul/: CONDUCT.md  IDENTITY.md  SOUL.example.md  SOUL.md  USER.md
tests/: conftest.py  test_100_autonomie.py  test_100_closure.py  test_100_frugalite.py  test_100_memoire.py  test_100_performances.py  test_atlas.py  test_context.py  test_deepseek_client.py  test_evaluator.py  test_memory.py  test_memory_10_scenarios.py  test_planner.py  test_react_loop.py  test_self.py  test_system_integrity.py  test_tools.py  test_utils.py  test_verify_5_phases.py
tools/: browser.py  code_exec.py  code_modify.py  cost_governor.py  dev_exec.py  fts_search.py  github_tools.py  guardian.py  mcp.py  memory_ops.py  pdf_reader.py  registry.py  skills_manager.py  social_search.py  telegram_stream.py  tool_creator.py  tools.json  tools.py  vm_security.py  web_search.py  youtube.py
workspace/: correctifs-verifies-2026-06-24.md  verif-test.md
