[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends._legacy:LegacyBackend"

[project]
name = "santana"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs>=2.6.2",
    "aiohttp>=3.14.1",
    "aiosignal>=1.4.0",
    "aiosqlite>=0.22.1",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.14.2",
    "attrs>=26.1.0",
    "av>=17.0.1",
    "beautifulsoup4>=4.15.0",
    "blinker>=1.9.0",
    "brotli>=1.2.0",
    "certifi>=2026.6.17",
    "cffi>=2.1.0",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.9",
    "click>=8.4.2",
    "cryptography>=48.0.0",
    "cssselect2>=0.9.0",
    "ctranslate2>=4.8.1",
    "deep-translator>=1.11.4",
    "distro>=1.9.0",
    "edge-tts>=7.2.8",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.12",
    "filelock>=3.31.0",
    "Flask>=3.1.3",
    "flatbuffers>=25.12.19",
    "fonttools>=4.63.0",
    "frozenlist>=1.8.0",
    "fsspec>=2026.6.0",
    "gitdb>=4.0.12",
    "GitPython>=3.1.50",
    "google-api-core>=2.32.0",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.56.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "googleapis-common-protos>=1.75.0",
    "greenlet>=3.5.1",
    "grpcio>=1.80.0",
    "grpcio-status>=1.71.2",
    "h11>=0.16.0",
    "hf-xet>=1.5.2",
    "httpcore>=1.0.9",
    "httplib2>=0.32.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface_hub>=1.24.0",
    "idna>=3.18",
    "iniconfig>=2.3.0",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "jiter>=0.16.0",
    "joblib>=1.5.3",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "loguru>=0.7.3",
    "Markdown>=3.10.2",
    "markdown-it-py>=4.2.0",
    "MarkupSafe>=3.0.3",
    "mcp>=1.27.1",
    "mdurl>=0.1.2",
    "mpmath>=1.4.1",
    "multidict>=6.7.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "oauthlib>=3.3.1",
    "onnxruntime>=1.27.0",
    "packaging>=26.2",
    "pillow>=12.3.0",
    "pluggy>=1.6.0",
    "propcache>=0.5.2",
    "proto-plus>=1.28.1",
    "protobuf>=5.29.6",
    "psutil>=7.2.2",
    "pyasn1>=0.6.4",
    "pyasn1_modules>=0.4.2",
    "pycparser>=3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pydantic_core>=2.47.0",
    "pydyf>=0.12.1",
    "pyee>=13.0.1",
    "Pygments>=2.20.0",
    "pygount>=3.2.0",
    "PyJWT>=2.13.0",
    "PyMuPDF>=1.27.2.3",
    "pyotp>=2.10.0",
    "pyparsing>=3.3.2",
    "pypdf>=6.14.2",
    "pyphen>=0.17.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "pytz>=2026.2",
    "PyYAML>=6.0.3",
    "referencing>=0.37.0",
    "regex>=2026.7.19",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "rpds-py>=0.30.0",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.6.0",
    "sgmllib3k>=1.0.0",
    "shellingham>=1.5.4",
    "smmap>=5.0.3",
    "sniffio>=1.3.1",
    "soupsieve>=2.9",
    "sse-starlette>=3.4.4",
    "starlette>=1.1.0",
    "sympy>=1.14.0",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "threadpoolctl>=3.6.0",
    "tinycss2>=1.5.1",
    "tinyhtml5>=2.1.0",
    "tokenizers>=0.23.1",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
    "transformers>=5.14.1",
    "twscrape>=0.18.1",
    "typer>=0.27.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.16.0",
    "uritemplate>=4.2.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.48.0",
    "weasyprint>=68.1",
    "webencodings>=0.5.1",
    "websockets>=16.0",
    "Werkzeug>=3.1.8",
    "xpoz>=0.7.5",
    "yarl>=1.24.2",
    "zopfli>=0.4.3",
]
